[tool.poetry]
name = "busTimes"
version = "0.1.0"
description = "Display bus times for a post code"
authors = ["Jaisal Patel <jaisal.patel@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.18.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
